[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/Button-settings/button-settings.png" type="Texture" id=1]
[ext_resource path="res://assets/Button-exit/button-exit.png" type="Texture" id=2]
[ext_resource path="res://assets/Button-play/button-play.png" type="Texture" id=3]
[ext_resource path="res://assets/Button-settings/button-settings-pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/Button-play/button-play-pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/Button-exit/button-exit-pressed.png" type="Texture" id=6]
[ext_resource path="res://assets/game logo.png" type="Texture" id=7]
[ext_resource path="res://assets/background_main_menu.png" type="Texture" id=8]
[ext_resource path="res://assets/mainmenu.ogg" type="AudioStream" id=9]
[ext_resource path="res://main_menu/Main Menu.gd" type="Script" id=10]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 56.0
margin_bottom = 120.0
texture = ExtResource( 8 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 15.0
margin_right = 150.0
margin_bottom = 225.0
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 810.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 343.0
margin_top = 2.0
margin_right = 680.0
margin_bottom = 808.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 337.0
margin_bottom = 194.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 337.0
margin_bottom = 194.0
texture = ExtResource( 7 )

[node name="play_center_container" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 198.0
margin_right = 337.0
margin_bottom = 398.0

[node name="playbtn" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/play_center_container"]
margin_left = 68.0
margin_right = 268.0
margin_bottom = 200.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )

[node name="settings_center_container" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 402.0
margin_right = 337.0
margin_bottom = 602.0

[node name="settingsbtn" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/settings_center_container"]
margin_left = 68.0
margin_right = 268.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )

[node name="exit_center_container" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 606.0
margin_right = 337.0
margin_bottom = 806.0

[node name="exitbtn" type="TextureButton" parent="MarginContainer/CenterContainer/VBoxContainer/exit_center_container"]
margin_left = 68.0
margin_right = 268.0
margin_bottom = 200.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -21.444
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/play_center_container/playbtn" to="." method="_on_playbtn_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/settings_center_container/settingsbtn" to="." method="_on_settingsbtn_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/exit_center_container/exitbtn" to="." method="_on_exitbtn_pressed"]
